# mai_object-oriented-programming_lab-3

./: .gitignore  CMakeLists.txt  Makefile  README.md  tests.cpp
include/: array.hpp  figures.hpp
src/: main.cpp
src/array/: constructors.cpp  tools.cpp
src/figures/: constructors.cpp  operators.cpp  tools.cpp
